<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2014 Braden Farmer

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.

-->

<resources>

    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_discard">Discard</string>
    <string name="action_edit">Edit</string>
    <string name="action_export">Export</string>
    <string name="action_font_size">Font size</string>
    <string name="action_new">New Note</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_sort_by">Sort notes by</string>
    <string name="app_name">SecureNotepad</string>
    <string name="app_name_debug">SecureNotepad (Debug)</string>
    <string name="cab_note_selected">note selected</string>
    <string name="cab_notes_selected">notes selected</string>
    <string name="changes_discarded">Changes discarded</string>
    <string name="dialog_about_message">SecureNotepad: a simple note-taking app with ecryption\n\n&#169; 2019 lswang2\n\nforked from &#169; 2019 Braden Farmer\nApp logo by Tobaloidee</string>
    <string name="dialog_about_title">About SecureNotepad</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="dialog_delete_button_title">Delete note</string>
    <string name="dialog_delete_button_title_plural">Delete notes</string>
    <string name="dialog_save_button_title">Save changes</string>
    <string name="dialog_save_changes">Do you want to save your changes?</string>
    <string name="draft_restored">Draft restored</string>
    <string name="draft_saved">Draft saved</string>
    <string name="double_tap">Tip: double-tap text to switch to Edit mode</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_text">Type to add text</string>
    <string name="empty_note">Please enter some text!</string>
    <string name="error_exporting_notes">Error exporting notes!</string>
    <string name="error_importing_notes">Error importing notes!</string>
    <string name="error_loading_list">Error loading list of notes!</string>
    <string name="error_loading_note">Error loading note!</string>
    <string name="failed_to_save">Error: Failed to save note!</string>
    <string name="first_run">Welcome to SecureNotepad!\n\nTo create a note, click the New Note button (plus sign).</string>
    <string name="first_view">To edit a saved note, double-tap the text or click the Edit button (pencil).</string>
    <string name="import_notes">Import notes</string>
    <string name="loading_external_file">Loading external files is not supported</string>
    <string name="no_notes_found">No notes found</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_exported_to">Note exported successfully</string>
    <string name="note_saved">Note saved</string>
    <string name="notes_deleted">Notes deleted</string>
    <string name="notes_exported_to">Notes exported successfully</string>
    <string name="note_imported_successfully">Note imported successfully</string>
    <string name="notes_imported_successfully">Notes imported successfully</string>
    <string name="pref_title_show_dialogs">Ask before saving</string>
    <string name="send_to">Share note to&#8230;</string>
    <string name="view_note">View Note</string>
    <string name="action_install">Install</string>
    <string name="action_no_thanks">No Thanks</string>
    <string name="pref_title_show_date">Show date/time</string>
    <string name="action_theme">Theme</string>
    <string name="pref_title_direct_edit">Edit notes directly</string>
    <string name="pref_title_markdown">Markdown/HTML support</string>
    <string name="action_lock">Lock</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_print">Print</string>
    <string name="action_start_selection">Select notes</string>
    <string name="action_select_all">Select all</string>
    <string name="no_notes_to_select">No notes to select</string>
    <string name="document">%1$s Document</string>
    <string name="no_notes_to_export">No notes selected to export</string>
    <string name="no_notes_to_delete">No notes selected to delete</string>
    <string name="check_for_updates">Check for Updates</string>

    <string-array name="sort_by_list">
        <item>Date (newest first)</item>
        <item>Date (oldest first)</item>
        <item>Name (A to Z)</item>
        <item>Name (Z to A)</item>
    </string-array>
    <string-array name="theme_list">
        <item>Light / sans serif</item>
        <item>Light / serif</item>
        <item>Light / monospace</item>
        <item>Dark / sans serif</item>
        <item>Dark / serif</item>
        <item>Dark / monospace</item>
    </string-array>
    <string-array name="font_size_list">
        <item>Smallest</item>
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
        <item>Largest</item>
    </string-array>
    <string name="password_input_title">Enter lock password</string>
    <string name="password_input_name1">Password</string>
    <string name="password_input_name2">Again</string>
    <string name="password_input_cancel">Cancel</string>
    <string name="password_input_ok">Lock</string>
    <string name="password_input_different">Password differs</string>
    <string name="password_input_hide">Hide password</string>
    <string name="password_check_title">Enter lock password</string>
    <string name="password_check_name">Password</string>
    <string name="password_check_cancel">Cancel</string>
    <string name="password_check_ok">Lock</string>
    <string name="password_check_hide">Hide password</string>
    <string name="password_check_fail">Password Fail</string>
    <string name="password_check_required">Locked contents, password required</string>

</resources>
